--- a/src/Pulsar.Client.Otel/Pulsar.Client.Otel.fsproj
+++ b/src/Pulsar.Client.Otel/Pulsar.Client.Otel.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <PackageId>Pulsar.Client.Otel</PackageId>
     <Title>Pulsar.Client.Otel</Title>
     <RootNamespace>Pulsar.Client.Otel</RootNamespace>
