--- a/src/Pulsar.Client/Pulsar.Client.fsproj
+++ b/src/Pulsar.Client/Pulsar.Client.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
     <PackageId>Pulsar.Client</PackageId>
     <Title>Pulsar.Client</Title>
@@ -39,6 +39,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pulsar.Client.Proto\Pulsar.Client.Proto.csproj" PrivateAssets="all" />
+    <PackageReference Include="Flurl.Http" Version="4.0.2" />
+    <PackageReference Include="FSharp.Json" Version="0.4.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
@@ -46,6 +48,7 @@
     <None Include="..\..\images\pulsar-client-dotnet.png" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" />
     <None Include="paket.references" />
+    <Compile Include="Common\HttpDTO.fs" />
     <Compile Include="Common\UMX.fs" />
     <Compile Include="Common\Log.fs" />
     <Compile Include="Common\Tools.fs" />
@@ -109,6 +112,7 @@
     <Compile Include="Schema\AutoProduceBytesSchema.fs" />
     <Compile Include="Schema\AutoConsumeSchema.fs" />
     <Compile Include="Schema\ProtobufNativeSchema.fs" />
+    <Compile Include="Internal\MyHttpClient.fs" />
     <Compile Include="Internal\TaskSeq.fs" />
     <Compile Include="Internal\Compression .fs" />
     <Compile Include="Internal\ChunkedMessageTracker.fs" />
@@ -119,6 +123,7 @@
     <Compile Include="Internal\ClientCnx.fs" />
     <Compile Include="Internal\ConnectionPool.fs" />
     <Compile Include="Internal\EndPointResolver.fs" />
+    <Compile Include="Internal\ILookupService.fs" />
     <Compile Include="Internal\BinaryLookupService.fs" />
     <Compile Include="Internal\HttpLookupService.fs" />
     <Compile Include="Internal\ConnectionHandler.fs" />
